add footer notes

--- a/index.css
+++ b/index.css
@@ -102,3 +102,10 @@ body {
 #empty-message {
   padding-top 100px;
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+}
